# fighters-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  labels.yml
cli/: CMakeLists.txt  cmd_ai.cpp  cmd_audio.cpp  cmd_bi.cpp  cmd_cb8.cpp  cmd_fnt.cpp  cmd_hud.cpp  cmd_inf.cpp  cmd_lay.cpp  cmd_lib.cpp  cmd_mission.cpp  cmd_mus.cpp  cmd_ot.cpp  cmd_pal.cpp  cmd_pic.cpp  cmd_plt.cpp  cmd_raw.cpp  cmd_seq.cpp  cmd_sh.cpp  cmd_sms.cpp  cmd_t2.cpp  main.cpp
docs/: ARCHITECTURE.md  README.md  TODO.md  api.md  cli.md  development.md  formats.md  gui.md  modding.md
docs/fa/: ARCHITECTURE.md  GAME_LOOP.md  GLOBALS.md  NETWORK.md  PHYSICS.md  README.md  RENDERER.md  STRUCTS.md  SYMBOLS.md  TODO.md
docs/fa/formats/: AI.md  AUDIO.md  BI.md  BRF.md  CAM.md  CFG.md  DLG.md  ECM.md  GAS.md  HGR.md  HUD.md  JT.md  LAY.md  MC.md  MM.md  MUS.md  NET.md  NT.md  OT.md  PLT.md  SEE.md  SH.md  SMS.md  T2.md  VDO.md
docs/formats/: AI.md  AUDIO.md  BI.md  BIN.md  BRF.md  CAM.md  CB8.md  CFG.md  DLG.md  EALIB.md  ECM.md  FNT.md  GAS.md  HGR.md  HUD.md  INF.md  JT.md  LAY.md  MC.md  MISSION.md  MM.md  MNU.md  MT.md  MUS.md  NET.md  NT.md  OT.md  PAL.md  PIC.md  PLT.md  PTS.md  RAW.md  RGN.md  SEE.md  SEQ.md  SH.md  SMS.md  SSF.md  T2.md  TXT.md  (+2 more)
gui/: CMakeLists.txt
gui/src/: app.cpp  app.h  main.cpp
gui/src/editors/: audio_editor.cpp  audio_editor.h  brf_editor.cpp  brf_editor.h  inf_editor.cpp  inf_editor.h  mission_editor.cpp  mission_editor.h  pic_editor.cpp  pic_editor.h  plt_editor.cpp  plt_editor.h  raw_viewer.cpp  raw_viewer.h  seq_editor.cpp  seq_editor.h
gui/src/panels/: editor_host.cpp  editor_host.h  lib_browser.cpp  lib_browser.h  preview.cpp  preview.h
lib/: CMakeLists.txt
lib/include/ft/: ai.h  audio.h  bi.h  blast.h  brf.h  cb8.h  ealib.h  fnt.h  hud.h  inf.h  lay.h  mission.h  ot.h  pal.h  pe.h  pic.h  plt.h  raw.h  seq.h  sh.h  sms.h  t2.h
lib/src/: ai.cpp  audio.cpp  bi.cpp  blast.cpp  brf.cpp  cb8.cpp  ealib.cpp  fnt.cpp  hud.cpp  inf.cpp  lay.cpp  mission.cpp  ot.cpp  pal.cpp  pe.cpp  pic.cpp  plt.cpp  raw.cpp  seq.cpp  sh.cpp  sms.cpp  t2.cpp
scripts/: resolve_ghidra_names.ps1
scripts/ghidra/: AnalyzeBI.java  AnalyzeBIFRAME.java  AnalyzeCAM.java  AnalyzeCAMDLL.java  AnalyzeDLG.java  AnalyzeECM.java  AnalyzeFA.java  AnalyzeGAS.java  AnalyzeGameLoop.java  AnalyzeHGR.java  AnalyzeHUD.java  AnalyzeInput.java  AnalyzeLAY.java  AnalyzeMC.java  AnalyzeMCDLL.java  AnalyzeMM.java  AnalyzeMUS.java  AnalyzeNetwork.java  AnalyzeOTNT.java  AnalyzePROJ.java  AnalyzePhysics.java  AnalyzeRenderer.java  AnalyzeSEE.java  AnalyzeT2.java  AnalyzeT2DLL.java  DumpAllFunctions.java  DumpBRFFunctions.java  DumpDLGChoosePreload.java  DumpDLGFunctions.java  DumpDLGHelpers.java  DumpECMEval.java  DumpGlobals.java  DumpHUDFunctions.java  DumpHUDGap.java  DumpHUDHVel.java  DumpHUDLoader.java  DumpLAYFunctions.java  DumpLAYFunctions2.java  DumpLAYFunctions3.java  DumpLAYFunctions4.java  (+21 more)
tests/: CMakeLists.txt  test_ealib.cpp
