add_executable(ft
    main.cpp
    cmd_lib.cpp
    cmd_pic.cpp
    cmd_seq.cpp
    cmd_audio.cpp
    cmd_ot.cpp
    cmd_mission.cpp
    cmd_sh.cpp
    cmd_cb8.cpp
    cmd_raw.cpp
)

target_link_libraries(ft PRIVATE ft_lib)

# stb_image needed in cli for PNG I/O
target_include_directories(ft PRIVATE ${CMAKE_SOURCE_DIR}/lib/vendor)

if(MSVC)
    target_compile_options(ft PRIVATE /W3 /WX-)
else()
    target_compile_options(ft PRIVATE -Wall -Wextra)
endif()
